--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -3,7 +3,9 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  max-width: 2000px;
   width: 100%;
+  margin: auto;
   padding: var(--body-padding);
 }
 
