--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -6,6 +6,8 @@ header {
   left: 0;
   padding: 0 var(--body-padding);
   right: 0;
+  margin: auto;
+  max-width: 2000px;
   width: 100%;
   color: var(--white-color);
   transition: all 0.5s;
@@ -51,7 +53,7 @@ nav,
 
 .header {
   --white-color: #000;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.726);
 }
 
 .header .logo h3 span {
