--- a/about/style.css
+++ b/about/style.css
@@ -54,3 +54,41 @@
   font-weight: 300;
   line-height: 25px;
 }
+
+.list-highlight {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.highlights {
+  max-width: 650px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.highlight {
+  width: 170px;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.highlight h1 {
+  padding: 8px;
+  font-size: 30px;
+  color: var(--wine-color);
+}
+
+.highlight p {
+  padding: 10px 8px;
+  background-color: var(--blue-dark-color);
+  border-radius: 4px;
+  color: var(--white-color);
+  font-weight: 300;
+}
