--- a/about/style.css
+++ b/about/style.css
@@ -46,11 +46,12 @@
   color: var(--wine-color);
 }
 
+.team-section p,
 .about-text p {
   max-width: 800px;
   width: 100%;
   text-align: justify;
-  font-size: 18px;
+  font-size: 16px;
   color: rgb(99, 99, 99);
   font-weight: 300;
   line-height: 25px;
@@ -76,8 +77,10 @@
 
 .highlight {
   width: 170px;
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .highlight h1 {
@@ -88,7 +91,12 @@
 
 .highlight p {
   padding: 10px 8px;
-  background-color: var(--blue-dark-color);
+  background-image: linear-gradient(
+    62deg,
+    var(--blue-dark-color),
+    var(--wine-color)
+  );
+  text-align: center;
   border-radius: 4px;
   color: var(--white-color);
   font-weight: 300;
@@ -111,8 +119,14 @@
   align-items: center;
   justify-content: start;
   flex-direction: row-reverse;
-  background-image: url(../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg);
+  /* background-image: url(../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg); */
   transition: transform ease 1s;
+  background-image: linear-gradient(
+    92deg,
+    var(--blue-dark-color),
+    var(--blue-color),
+    var(--blue-dark-color)
+  );
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -137,8 +151,14 @@
 .vision img {
   width: 270px;
   height: 410px;
+  filter: grayscale(100%);
   object-fit: cover;
   object-position: center;
+}
+
+.mission img:hover,
+.vision img:hover {
+  filter: grayscale(10%);
 }
 
 .mission-text h3,
@@ -168,16 +188,16 @@
   justify-content: center;
   z-index: 5;
   flex-direction: column;
-  gap: 5px;
+  gap: 8px;
 }
 
 .circle-indicator {
-  width: 10px;
+  width: 15px;
   transition: all ease 1s;
   cursor: pointer;
-  height: 10px;
+  height: 15px;
   border-radius: 100%;
-  border: 2px solid var(--white-color);
+  border: 1px solid var(--white-color);
 }
 
 .mission-vision.active .indicator2 {
@@ -199,3 +219,105 @@
 .mission-vision.active .vision {
   transform: translateY(-410px);
 }
+
+/* mission and vision ends here */
+
+/* our team  */
+
+.team-section {
+  /* background-color: var(--black-color); */
+  /* background-image: url(); */
+  margin: auto;
+  max-width: 2000px;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-section h3 {
+  font-size: 30px;
+  background-image: linear-gradient(
+    62deg,
+    var(--wine-color),
+    var(--blue-dark-color)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.team-section p {
+  text-align: center;
+  margin-bottom: 15px;
+  color: var(--white-color);
+}
+
+.team-list {
+  max-width: 2000px;
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.team {
+  width: 250px;
+  background-color: rgba(0, 0, 0, 0.829);
+  border-radius: 10px;
+  overflow: hidden;
+  color: var(--white-color);
+}
+
+.team-img {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.team-img img {
+  height: 200px;
+  filter: grayscale(50%);
+  object-fit: cover;
+  object-position: top center;
+}
+
+.team-img img:hover {
+  filter: grayscale(0%);
+  transform: scale(1.1);
+}
+
+.team-details {
+  padding: 15px 15px 0;
+}
+
+.team h4 {
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+span.post {
+  font-weight: 200;
+}
+
+.team-contact {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: 1fr 20px;
+  padding: 9px 0 0;
+  font-weight: 200;
+  color: var(--wine-2-color);
+}
+
+.team-contact img {
+  width: 20px;
+  height: 20px;
+  filter: contrast(30%);
+}
+
+/* our teams ends here */
