--- a/about/style.css
+++ b/about/style.css
@@ -2,6 +2,7 @@
 @import url(../styles/components/anchor-style.css);
 @import url(../styles/components/footer.css);
 @import url(../styles/components/header.css);
+@import url(../styles/components/contact.css);
 
 /* other styling */
 .main-cta {
@@ -255,21 +256,36 @@
 }
 
 .team-list {
-  max-width: 2000px;
+  /* max-width: 600px; */
   width: 100%;
-  padding: 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  grid-gap: 10px;
   gap: 10px;
+  justify-content: flex-start;
+  overflow: hidden;
+  overflow-x: scroll;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.team-list::-webkit-scrollbar {
+  width: 20px;
+  height: 10px;
+}
+
+.team-list::-webkit-scrollbar-thumb,
+.team-list::-webkit-scrollbar-thumb:hover {
+  background: hsla(0, 0%, 9%, 0.514);
 }
 
 .team {
-  width: 250px;
+  min-width: 220px;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.829);
   border-radius: 10px;
   overflow: hidden;
+  display: grid;
   color: var(--white-color);
 }
 
@@ -371,5 +387,9 @@ span.post {
 
   .mission-vision.active .vision {
     transform: translateY(-700px);
+  }
+
+  .highlights {
+    justify-content: center;
   }
 }
