change the team section layout to scrollable, added contact form to the about section

--- a/about/style.css
+++ b/about/style.css
@@ -23,6 +23,7 @@
 }
 
 .main-cta h1 {
+  text-shadow: 5px 5px 3px #000;
   font-size: 45px;
   letter-spacing: 8px;
 }
@@ -70,7 +71,6 @@
   max-width: 650px;
   width: 100%;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -157,8 +157,8 @@
   object-position: center;
 }
 
-.mission img:hover,
-.vision img:hover {
+.mission:hover img,
+.vision:hover img {
   filter: grayscale(10%);
 }
 
@@ -302,7 +302,7 @@
   object-position: top center;
 }
 
-.team-img img:hover {
+.team:hover .team-img img {
   filter: grayscale(0%);
   transform: scale(1.1);
 }
