adjust resposiveness on about page and start service page

--- a/about/style.css
+++ b/about/style.css
@@ -236,6 +236,7 @@
   align-items: center;
 }
 
+.about-text h3,
 .team-section h3 {
   font-size: 30px;
   background-image: linear-gradient(
@@ -342,18 +343,22 @@ span.post {
 
 @media (max-width: 650px) {
   .mission-vision {
-    height: 700px;
+    height: 720px;
+    position: relative;
   }
 
   .mission,
   .vision {
     flex-direction: column-reverse;
     padding: 50px;
-    height: 700px;
+    height: 720px;
+    width: 100%;
   }
 
   .vision {
-    flex-direction: column-reverse;
+    position: absolute;
+    top: 0;
+    left: 100%;
   }
 
   .mission-text,
@@ -381,11 +386,11 @@ span.post {
   }
 
   .mission-vision.active .mission {
-    transform: translateY(-700px);
+    transform: translateX(-100%);
   }
 
   .mission-vision.active .vision {
-    transform: translateY(-700px);
+    transform: translateX(-100%);
   }
 
   .highlights {
