--- a/service/style.css
+++ b/service/style.css
@@ -21,6 +21,7 @@
   align-items: center;
   gap: 20px;
   flex-direction: column;
+  text-align: center;
 }
 
 .main-cta h1 {
@@ -28,70 +29,14 @@
   letter-spacing: 8px;
 }
 
-.about-company {
-  padding: 50px 20px 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  flex-direction: column;
-}
-
-.about-text {
-  text-align: center;
-}
-
-.about-text h3 {
-  font-size: 30px;
-  margin-bottom: 30px;
-  letter-spacing: 5px;
-  color: var(--wine-color);
-}
-
-.about-text p {
-  max-width: 800px;
+.main-cta h5 {
+  font-size: 20px;
+  line-height: 28px;
+  max-width: 900px;
   width: 100%;
-  text-align: justify;
-  font-size: 18px;
-  color: rgb(99, 99, 99);
-  font-weight: 300;
-  line-height: 25px;
 }
 
-.list-highlight {
-  display: flex;
+.service {
   width: 100%;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.highlights {
-  max-width: 650px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.highlight {
-  width: 170px;
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
-.highlight h1 {
-  padding: 8px;
-  font-size: 30px;
-  color: var(--wine-color);
-}
-
-.highlight p {
-  padding: 10px 8px;
-  background-color: var(--blue-dark-color);
-  border-radius: 4px;
-  color: var(--white-color);
-  font-weight: 300;
+  padding: 50px 30px;
 }
