--- a/service/style.css
+++ b/service/style.css
@@ -38,5 +38,10 @@
 
 .service {
   width: 100%;
+  margin: 0 auto;
   padding: 50px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
