--- a/styles/main.css
+++ b/styles/main.css
@@ -64,3 +64,26 @@ button {
 img {
   width: 100%;
 }
+
+button.primary-button img {
+  width: 20px;
+  padding-right: 5px;
+}
+
+.linear-gradient-bgcolor {
+  background-image: linear-gradient(
+    62deg,
+    var(--blue-dark-color),
+    var(--wine-color)
+  );
+}
+
+.linear-gradient-text {
+  background-image: linear-gradient(
+    62deg,
+    var(--wine-color),
+    var(--blue-dark-color)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
