added all needed folders

--- a/styles/main.css
+++ b/styles/main.css
@@ -84,6 +84,7 @@ button.primary-button img {
     var(--wine-color),
     var(--blue-dark-color)
   );
+  text-align: center;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
