--- a/faq/style.css
+++ b/faq/style.css
@@ -9,8 +9,8 @@
   margin: auto;
   max-width: 2000px;
   width: 100%;
-  padding: 200px 80px 100px;
-  background-image: url(../images/nasa-Q1p7bh3SHj8-unsplash.jpg);
+  padding: 200px 80px 50px;
+  background-image: url(../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg);
   background-position: center;
   background-repeat: no-repeat;
   text-shadow: 2px 2px 5px #000;
@@ -24,124 +24,42 @@
   text-align: center;
 }
 
-.main-cta h1 {
-  font-size: 45px;
-  letter-spacing: 8px;
-}
-
-.main-cta h5 {
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 28px;
-  max-width: 900px;
-  width: 100%;
-}
-
-.service {
-  width: 100%;
-  margin: 0 auto;
+.faq-body {
+  display: grid;
+  place-items: center;
+  width: auto;
   padding: 50px 30px;
+}
+
+.faqs {
+  list-style-type: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.service-list {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.service-list h1 {
-  font-size: 25px;
-}
-
-.service-list p {
-  margin: 10px 0 30px;
-  font-weight: 300px;
-  max-width: 600px;
+  gap: 20px;
+  max-width: 800px;
   width: 100%;
 }
 
-.sub-services {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
-  margin-bottom: 30px;
-}
-
-.serv {
-  width: 300px;
-  height: 350px;
+.faq {
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.281);
+  color: #000;
   border-radius: 10px;
+  min-height: 70px;
+}
+
+.faq p {
   overflow: hidden;
-  box-shadow: 0 0 10px rgb(202, 202, 202);
-}
-
-.serv-img {
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
-}
-
-.serv-img img {
-  object-fit: cover;
-  height: 200px;
-  object-position: center;
-  transition: transform ease 1s;
-}
-
-.serv:hover .serv-img img {
-  transform: scale(1.2);
-}
-
-.serv-details {
-  padding: 15px;
-}
-
-.serv-view-type {
-  color: #b7b7b7;
-  font-weight: 500;
-}
-
-.serv-details h4 {
-  color: var(--wine-color);
+  white-space: nowrap;
   margin-top: 5px;
-  font-variant: small-caps;
-  font-size: 22px;
+  text-overflow: ellipsis;
 }
 
-.serv-link {
-  cursor: pointer;
-  width: 100%;
-  height: 30px;
-  margin-top: 20px;
-  font-weight: 500;
-  transition: all ease-in-out 1s;
-  color: var(--blue-dark-color);
+.faq:hover {
+  background-color: #000;
+  color: #fff;
 }
 
-.serv-link:hover {
-  color: var(--wine-color);
-}
-
-@media (max-width: 650px) {
-  .sub-services {
-    width: calc(100vw - 100px);
-    display: flex;
-    justify-content: flex-start;
-    grid-gap: 15px;
-    gap: 15px;
-    overflow: hidden;
-    align-items: center;
-    overflow-x: scroll;
-    flex-wrap: nowrap;
-  }
-
-  .serv {
-    min-width: 300px;
-    display: grid;
-  }
+.faq:hover p {
+  white-space: normal;
 }
