completed the privacy page

--- a/privacy/style.css
+++ b/privacy/style.css
@@ -111,6 +111,10 @@ article {
 }
 
 @media (max-width: 650px) {
+  main {
+    grid-template-rows: 100px 1fr;
+  }
+
   section {
     display: none;
   }
