--- a/faq/style.css
+++ b/faq/style.css
@@ -25,9 +25,10 @@
 }
 
 .faq-body {
-  display: grid;
-  place-items: center;
-  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100vw;
   padding: 50px 30px;
 }
 
