--- a/moderator/style.css
+++ b/moderator/style.css
@@ -78,12 +78,18 @@ form {
 button {
   background-color: rgb(255, 153, 0);
   border: none;
+  text-align: center;
   padding: 8px 10px;
   width: 100%;
   color: #fff;
   font-size: 14px;
   cursor: pointer;
   font-weight: 500;
+}
+
+button[type="submit"] {
+  text-align: center;
+  justify-content: center;
 }
 
 input {
