--- a/moderator/_/style.css
+++ b/moderator/_/style.css
@@ -14,6 +14,7 @@ main {
   height: 100vh;
   display: grid;
   grid-template-columns: 80px 1fr;
+  /* overflow: hidden; */
   grid-template-rows: 1fr;
 }
 
@@ -75,31 +76,26 @@ a > .nav-list > img {
 }
 
 section {
-  margin: 60px 40px 0;
+  padding: 60px 40px 0;
+  width: auto;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 60px 1fr;
+}
+
+.main-bar {
   overflow: scroll;
 }
 
-section h1 {
+section > h1 {
   text-align: right;
 }
 
 .board {
   width: 100%;
-  height: 100vh;
+  display: none;
 }
 
-#teams {
-  background-color: red;
-}
-
-#services {
-  background-color: pink;
-}
-
-#faqs {
-  background-color: green;
-}
-
-#request-form {
-  background-color: blue;
+.board.open {
+  display: block;
 }
