--- a/moderator/_/style.css
+++ b/moderator/_/style.css
@@ -119,7 +119,11 @@ button {
 }
 
 button:hover {
-  font-weight: 500;
+  font-weight: 600;
+}
+
+button.red {
+  background-color: #f00;
 }
 
 /* tables */
