--- a/moderator/_/style.css
+++ b/moderator/_/style.css
@@ -159,3 +159,97 @@ th {
   justify-content: start;
   overflow: hidden;
 }
+
+#none {
+  display: flex;
+  width: 100%;
+  height: 350px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.loading {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 5px solid rgb(98, 98, 98);
+  border-top: 5px solid #fff;
+  animation: rotate linear infinite 2s;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* add team member form board */
+
+.add-team-form-board {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.834);
+  display: none;
+  place-items: center;
+}
+
+.add-team-form-board form {
+  width: 350px;
+  height: 400px;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 40px;
+}
+
+label span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  font-size: 10px;
+  cursor: pointer;
+  height: 100px;
+  text-align: center;
+  background-color: rgb(220, 220, 220);
+  margin: 20px auto;
+}
+
+label {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  padding: 5px 0;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+label span img {
+  width: 100%;
+  height: 100px;
+  object-position: center;
+  object-fit: cover;
+}
+
+.btn-bottom {
+  width: 100%;
+  display: grid;
+  margin-top: 30px;
+  gap: 5px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.add-team-form-board.open {
+  display: grid;
+}
