--- a/moderator/_/style.css
+++ b/moderator/_/style.css
@@ -135,7 +135,7 @@ tr {
   width: 100%;
   display: grid;
   padding: 10px 0;
-  grid-template-columns: 50px 100px 1fr 0.8fr 150px 1.3fr 100px;
+  grid-template-columns: 50px 100px 1fr 0.8fr 150px 1.3fr;
 }
 
 tr:not(:last-child) {
@@ -193,7 +193,7 @@ th {
 
 /* add team member form board */
 
-.add-team-form-board {
+.form-board {
   position: absolute;
   top: 0;
   left: 0;
@@ -205,12 +205,17 @@ th {
   place-items: center;
 }
 
-.add-team-form-board form {
+.form-board form {
   width: 350px;
   height: 400px;
   border-radius: 20px;
   background-color: #fff;
   padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  justify-content: center;
 }
 
 label span {
@@ -228,6 +233,7 @@ label span {
 
 label {
   display: flex;
+  width: 100%;
   /* flex-direction: column; */
   align-items: center;
   padding: 5px 0;
@@ -250,6 +256,13 @@ label span img {
   grid-template-columns: 1fr 1fr;
 }
 
-.add-team-form-board.open {
+.form-board.open {
   display: grid;
+}
+
+.rem-team form label {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 1fr;
+  height: 90px;
 }
