--- a/moderator/_/style.css
+++ b/moderator/_/style.css
@@ -45,13 +45,13 @@ nav {
   justify-content: start;
 }
 
-nav a {
+nav div {
   width: 100%;
   padding: 8px 12px;
   position: relative;
 }
 
-nav a:hover .title {
+nav div:hover .title {
   display: block;
 }
 
@@ -71,7 +71,7 @@ nav a:hover .title {
   transform: translate(0%, -50%);
 }
 
-a > .nav-list > img {
+div > .nav-list > img {
   width: 40px;
 }
 
@@ -269,7 +269,8 @@ label span img {
 
 /* ======= faq styling =========== */
 
-.faqs {
+.faqs,
+.randc-form-list {
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -279,10 +280,11 @@ label span img {
   margin: auto;
 }
 
-.faq {
+.faq,
+.randc-form-list li {
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.281);
-  color: #000;
+  /* color: #000; */
   border-radius: 10px;
   min-height: 70px;
 }
@@ -294,7 +296,8 @@ label span img {
   text-overflow: ellipsis;
 }
 
-.faq:hover {
+.faq:hover,
+.randc-form-list li:hover {
   background-color: #000;
   color: #fff;
 }
@@ -311,4 +314,64 @@ label span img {
 
 li {
   list-style-type: none;
+}
+
+/* =============== Request/Complaint Form Styling ================ */
+.randc-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+}
+
+.randc-head span {
+  font-weight: 700;
+}
+
+.randc-contact {
+  display: flex;
+  gap: 5px;
+}
+
+.randc-contact a {
+  padding: 5px 8px;
+  transition: all ease-in-out 1s;
+  text-decoration: none;
+  color: #fff;
+}
+
+.randc-contact a:hover {
+  background-color: #02f402;
+  border-radius: 20px;
+}
+
+.hidden-info {
+  display: flex;
+  padding: 5px 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hidden-info span {
+  font-size: 12px;
+  padding: 8px 10px;
+  background-color: #02f402;
+  color: #fff;
+}
+
+span.randc-tag {
+  background-color: rgb(81, 2, 142);
+}
+
+.randc-message {
+  padding: 5px 7px;
+  display: none;
+}
+
+.randc-form-list li {
+  transition: height ease-in-out 1s;
+}
+
+.randc-form-list li:hover .randc-message {
+  display: block;
 }
