--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -39,7 +39,7 @@
 .form-container {
   max-width: 700px;
   width: 100%;
-  background-image: url("../../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg");
+  background-image: url("../../images/billy-huynh-W8KTS-mhFUE-unsplash.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
