--- a/faq/style.css
+++ b/faq/style.css
@@ -10,7 +10,7 @@
   max-width: 2000px;
   width: 100%;
   padding: 200px 80px 50px;
-  background-image: url(../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg);
+  background-image: url(../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.webp);
   background-position: center;
   background-repeat: no-repeat;
   text-shadow: 2px 2px 5px #000;
