--- a/moderator/style.css
+++ b/moderator/style.css
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   flex-direction: column;
   color: #000;
-  background: url(../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg);
+  background: url(../images/billy-huynh-W8KTS-mhFUE-unsplash.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
