--- a/service/style.css
+++ b/service/style.css
@@ -10,7 +10,7 @@
   max-width: 2000px;
   width: 100%;
   padding: 200px 80px 100px;
-  background-image: url(../images/nasa-Q1p7bh3SHj8-unsplash.jpg);
+  background-image: url(../images/nasa-Q1p7bh3SHj8-unsplash.webp);
   background-position: center;
   background-repeat: no-repeat;
   text-shadow: 2px 2px 5px #000;
