--- a/styles/stlye.css
+++ b/styles/stlye.css
@@ -7,7 +7,7 @@
 /* other styling */
 .main {
   width: 100%;
-  background-image: url(../images/nasa-Q1p7bh3SHj8-unsplash.jpg);
+  background-image: url(../images/nasa-Q1p7bh3SHj8-unsplash.webp);
   background-position: center;
   background-size: cover;
   position: relative;
